--- a/public/css/restrict/estilo.css
+++ b/public/css/restrict/estilo.css
@@ -4,7 +4,7 @@
     outline: 0;
     box-sizing: border-box;
 }
-:root{
+:root {
     --black: #000000;
     --white: #ffffff;
     --primary: #455a64;
@@ -17,7 +17,7 @@
 header {
     display: flex;
     border-bottom: 0.5rem solid
-var(--secondary);
+    var(--secondary);
 }
 header picture img {
     height: 6rem;
@@ -28,64 +28,64 @@ header nav {
     justify-content: flex-end;
 }
 header nav ul {
- list-style-type: none;
- display: flex;
- align-items: center;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
 }
 header ul li {
- margin: 0 1rem;
+    margin: 0 1rem;
 }
 header ul li a {
- text-decoration: none;
- color: var(--primary);
+    text-decoration: none;
+    color: var(--primary);
 }
 main {
- min-height: 80vh;
- margin: 0.5rem;
+    min-height: 80vh;
+    margin: 0.5rem;
 }
-
+/* Botão */
 .button {
- display: flex;
- justify-content: center;
- text-decoration: none;
- text-align: center;
- background-color: var(--primary);
- color: var(--white);
- border: 0.2rem solid var(--primary);
- border-radius: 0.5rem;
- margin: 0.5rem 0;
- padding: 0.2rem;
- width: 7rem;
- cursor: pointer;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    text-align: center;
+    background-color: var(--primary);
+    color: var(--white);
+    border: 0.2rem solid var(--primary);
+    border-radius: 0.5rem;
+    margin: 0.5rem 0;
+    padding: 0.2rem;
+    width: 7rem;
+    cursor: pointer;
 }
-
+/* Tabela */
 main > table {
- width: 100%;
- border-collapse: collapse;
+    width: 100%;
+    border-collapse: collapse;
 }
 main > table tr td, main > table tr th {
- border: 1px solid var(--black);
- padding: 1rem;
+    border: 1px solid var(--black);
+    padding: 1rem;
 }
-
+/* Formulário */
 form div {
- display: grid;
- grid-template-columns: 10rem auto;
- margin: 1rem 0;
+    display: grid;
+    grid-template-columns: 10rem auto;
+    margin: 1rem 0;
 }
 form div div.sub {
- display: grid;
- grid-template-columns: 2rem auto;
- margin: 1rem 0;
+    display: grid;
+    grid-template-columns: 2rem auto;
+    margin: 1rem 0;
 }
 form div label {
- display: flex;
- flex-direction: column;
- justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 form div input, form div textarea {
- padding: 0.3rem;
- border: 0.2rem solid var(--primary);
- border-radius: 0.5rem;
- font-size: 1rem;
+    padding: 0.3rem;
+    border: 0.2rem solid var(--primary);
+    border-radius: 0.5rem;
+    font-size: 1rem;
 }
